Fix working process on mobile

--- a/_sass/components/_ui_ux.scss
+++ b/_sass/components/_ui_ux.scss
@@ -35,7 +35,7 @@
         .number {
           border-right: 1px solid #ebebeb;
           margin-right: 28%;
-          margin-top: 25%;
+          margin-top: 35%;
           font-size: 90px;
         }
       }
