--- a/_sass/components/shared/_services.scss
+++ b/_sass/components/shared/_services.scss
@@ -139,13 +139,10 @@
 
     .step_by_step {
       .step {
-        .number {
-          font-size: 50px !important;
-        }
-  
         .card {
           margin-bottom: 50px !important;
           padding: 20px !important;
+
           .description {
             font-size: 14px;
           }
